--- a/Presentation/Coloring.tex
+++ b/Presentation/Coloring.tex
@@ -161,7 +161,7 @@ Un graphe \textit{orienté} possède des arêtes ayant une orientation.
  }
 
 
-\section{Modélisation}
+\section{Formalisation}
 
 \subsection{Formalisation en logique du premier ordre}
 \frame
