Final update about presentation

--- a/Presentation/Coloring.tex
+++ b/Presentation/Coloring.tex
@@ -339,6 +339,18 @@ Nous considérons la signature  $\Sigma = \{ e^{r2} , c^{r2}, n^{f0}, p^{f0}  \}$
     \end{figure}
 }
 
+\frame
+{
+\frametitle{Résultats du programme}
+
+  \begin{figure}[!htb]
+        \begin{center}
+            \includegraphics[width = 5 cm]{../graphes_solution/graphe_solution_plus.png}
+        \end{center}
+                \caption{Une solution pour $n=10$, $p=15$, $k=4$}
+    \end{figure}
+}
+
 \subsection{Conclusion et autres applications}
 
 \frame
